--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,12 @@
       <artifactId>logsnag4j</artifactId>
       <version>1.1</version>
     </dependency>
+      <dependency>
+          <groupId>org.junit.jupiter</groupId>
+          <artifactId>junit-jupiter-params</artifactId>
+          <version>5.4.2</version>
+          <scope>test</scope>
+      </dependency>
 
   </dependencies>
 </project>
